# IB-API

./: .gitignore  HANDOFF.md  README.md  ZF_FOP_Debug.ipynb  carry_risk_dashboard.html  live_carry.xlsx  macro_calendar.py  news_all_news_broadtape_validation.ipynb  open_inventory_planner.ps1  open_inventory_planner.py  open_inventory_planner.sh  open_trade_gateway.ps1  open_trade_gateway.py  open_trade_gateway.sh  portfolio_monitor.py  refresh_inventory_data.py  requirements_dashboard.txt  requirements_news.txt  run_clean_treasury_monitor.ps1  run_target_treasury_monitor.ps1  run_zf_dashboard.ps1  security_audit_report.md  sell_side_inventory_planner.html  stop_inventory_planner.ps1  stop_inventory_planner.sh  test_carry_dashboard_html.py  test_carry_dashboard_render_smoke.js  test_carry_dashboard_sync.py  test_inventory_planner.py  test_inventory_planner_dashboard_smoke.js  test_live_zf_near_expiry_chain.py  test_margin_whatif.py  test_option_analytics.py  test_refresh_inventory_data.py  test_static_zf_option_chain.py  test_trade_gateway.py  test_verified_news_monitor.py  test_zc_quote_units.py  treasury_carry_planner_validation.ipynb  treasury_fop_chain.py  (+6 more)
research_portal/: .gitignore  FINANCIAL_ASSET_VIEW_PROMPTS.md  README.md  handbook.md  login.ps1  pyproject.toml  requirements.txt  setup.ps1  snapshot.ps1
research_portal/portal_crawler/: __init__.py  browser.py  cli.py  config.py  diagnostics.py  downloads.py  models.py  snapshot.py  storage.py
research_portal/sell_side_research_portal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  (+1 more)
(+105 files in other folders)
